Change MASTER to MAIN

--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -19,7 +19,7 @@ services:
     build:
       context: meta
       args:
-        - SELECTED_BRANCH=master
+        - SELECTED_BRANCH=main
     container_name: meta
     restart: always
     depends_on:
