--- a/meta/Dockerfile
+++ b/meta/Dockerfile
@@ -1,7 +1,9 @@
 FROM node:12.16-alpine
 
-# Get argument from docker-compose-prod.yaml
-# ARG SELECTED_BRANCH=main
+# Default arguments
+ARG SELECTED_BRANCH=master
+
+WORKDIR /archipelago
 
 RUN node -v
 RUN npm -v
@@ -14,19 +16,12 @@ RUN yarn global add pm2
 # If we don't do that, Docker may skip the git clone command
 ADD https://api.github.com/repos/assemblee-virtuelle/archipelago/git/refs/heads/$SELECTED_BRANCH ../git-version.json
 
-RUN git clone https://github.com/assemblee-virtuelle/archipelago /semapps_clone
+RUN git clone https://github.com/assemblee-virtuelle/archipelago.git /archipelago
 
-WORKDIR /semapps_clone
 RUN git checkout $SELECTED_BRANCH
 
-# Move selected dir to root /app directory
-RUN mv ./middleware /app
-
-# We can now remove the clone
-WORKDIR /app
-
-ADD ./ecosystem.config.js /app
-ADD ./app /app
+ADD app /archipelago/middleware
+WORKDIR /archipelago/middleware
 
 RUN yarn install
 
