--- a/meta/app/.env
+++ b/meta/app/.env
@@ -1,4 +1,4 @@
-SEMAPPS_HOME_URL=https://data.meta.flod.io/
+SEMAPPS_HOME_URL=https://mydomain/
 
 # For local configuration
 #SEMAPPS_HOME_URL=http://localhost:3000/
@@ -6,9 +6,9 @@ SEMAPPS_HOME_URL=https://data.meta.flod.io/
 
 # Triple store
 SEMAPPS_SPARQL_ENDPOINT=http://fuseki:3030/
-SEMAPPS_MAIN_DATASET=metaSec
+SEMAPPS_MAIN_DATASET=mydataset
 SEMAPPS_JENA_USER=admin
-SEMAPPS_JENA_PASSWORD=admin
+SEMAPPS_JENA_PASSWORD=mypassword
 
 # Redis
 SEMAPPS_REDIS_CACHE_URL=redis://redis:6379/0
