--- a/meta/app/.env
+++ b/meta/app/.env
@@ -1,4 +1,4 @@
-SEMAPPS_HOME_URL=https://mydomain/
+SEMAPPS_HOME_URL=https://mydomain.com/
 
 # For local configuration
 #SEMAPPS_HOME_URL=http://localhost:3000/
@@ -17,3 +17,10 @@ SEMAPPS_REDIS_CACHE_URL=redis://redis:6379/0
 SEMAPPS_OIDC_ISSUER=
 SEMAPPS_OIDC_CLIENT_ID=
 SEMAPPS_OIDC_CLIENT_SECRET=
+
+# Backup server (Optional)
+SEMAPPS_BACKUP_SERVER_USER=
+SEMAPPS_BACKUP_SERVER_PASSWORD=
+SEMAPPS_BACKUP_SERVER_HOST=
+SEMAPPS_BACKUP_SERVER_PATH=
+SEMAPPS_BACKUP_FUSEKI_DATASETS_PATH=
