--- a/middleware-glocal/app/.env.local
+++ b/middleware-glocal/app/.env.local
@@ -1,12 +1,12 @@
-SEMAPPS_HOME_URL=https://mydomain.com/
+SEMAPPS_HOME_URL=https://data.gl.assemblee-virtuelle.org/
 
 # For local configuration
 #SEMAPPS_HOME_URL=http://localhost:3000/
-#SEMAPPS_PORT=3000
+#SEMAPPS_PORT=3001
 
 # Triple store
 SEMAPPS_SPARQL_ENDPOINT=http://fuseki:3030/
-SEMAPPS_MAIN_DATASET=mydataset
+SEMAPPS_MAIN_DATASET=glocal
 SEMAPPS_JENA_USER=admin
 SEMAPPS_JENA_PASSWORD=mypassword
 
@@ -26,4 +26,4 @@ SEMAPPS_BACKUP_SERVER_PATH=
 SEMAPPS_BACKUP_FUSEKI_DATASETS_PATH=
 
 # Dataset
-SEMAPPS_AUTH_ACCOUNTS_DATASET_NAME=settings-meta
+SEMAPPS_AUTH_ACCOUNTS_DATASET_NAME=settings-glocal
