--- a/deploy-archipelago-glocal/addOn/frontend/public/manifest.json
+++ b/deploy-archipelago-glocal/addOn/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Transiscope en Pays Nantais",
-  "name": "Transiscope en Pays Nantais",
+  "short_name": "Archipelago Glocal",
+  "name": "Archipelago Glocal",
   "icons": [
     {
       "src": "favicon.png",
